--- a/Libreria/src/VistaApp/CrearReporte.form
+++ b/Libreria/src/VistaApp/CrearReporte.form
@@ -8,7 +8,7 @@
       <Color blue="33" green="33" red="ff" type="rgb"/>
     </Property>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-      <Color id="Cursor Por defecto"/>
+      <Color id="Default Cursor"/>
     </Property>
     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
       <Font name="Comic Sans MS" size="14" style="3"/>
