--- a/Libreria/src/VistaApp/AltaLib.form
+++ b/Libreria/src/VistaApp/AltaLib.form
@@ -564,9 +564,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="txtISBN">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtISBNActionPerformed"/>
-                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtISBNKeyPressed"/>
-                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtISBNKeyTyped"/>
+                <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtISBNFocusLost"/>
               </Events>
             </Component>
             <Component class="javax.swing.JToggleButton" name="btnConsultar">
